syntax = "proto3";
package api;

import "empty.proto";

option go_package = "api/protobuf";

message Deployment {
  string id = 1;
  string ownerUserId = 2;
  string domain = 3;
  Status status = 4;

  enum Status {
    STARTING_UP = 0;
    FAILED = 1;
    RUNNING = 2;
    SHUTTING_DOWN = 3;
    UNREACHABLE = 4;
  }
}

message NewDeployment {
  string ownerUserId = 1;
}

message GetDeploymentRequest {
  string ownerUserId = 1;
  string deploymentId = 2;
}

message RemoveDeploymentRequest {
  string deploymentId = 1;
}

service DeploymentManagementService {
  rpc CreateDeployment(NewDeployment) returns (Deployment);
  rpc GetDeployment(GetDeploymentRequest) returns (Deployment);
  rpc RemoveDeployment(RemoveDeploymentRequest) returns (Empty);
}
